template: update to match online ux
This will make it smoother to have online repos constantly updated:
* Adds memory limit param to the template
* Adds minor changes to adhere to online requirements
* Adds context directory by default to streamline the update process
  with online. Also removes the contextDir information from the README.adoc

Signed-off-by: Joao Goncalves <jsvgoncalves@redhat.com>

--- a/README.adoc
+++ b/README.adoc
@@ -22,7 +22,7 @@ After logging into an OpenShift environment and creating or using an existing pr
 
 [source]
 ----
-oc new-app registry.access.redhat.com/dotnet/dotnetcore-10-rhel7~https://github.com/openshift-s2i/s2i-aspnet-example --context-dir=app --name=aspnet-app
+oc new-app registry.access.redhat.com/dotnet/dotnetcore-10-rhel7~https://github.com/openshift-s2i/s2i-aspnet-example --name=aspnet-app
 ----
 
 Create a new route so that the application is accessible outside the OpenShift environment
@@ -59,15 +59,10 @@ Instantiate the template to build and deploy the sample application
 
 [source]
 ----
-oc new-app --template=aspnet-s2i -p GIT_URI=https://github.com/openshift-s2i/s2i-aspnet-example,GIT_CONTEXT_DIR=app
+oc new-app --template=aspnet-s2i -p GIT_URI=https://github.com/openshift-s2i/s2i-aspnet-example
 ----
 
 The template can also be instantiated using the OpenShift web console. Login to the console and navigate to the desired project. Click the *Add to Project* button. Search and select the `aspnet-s2i`.
-
-Set the following parameters:
-
-* Git URI - https://github.com/openshift-s2i/s2i-aspnet-example
-* Git Context Directory - app
 
 Click *Create* to start a build and deploy the sample application.
 
