--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ images. The branches of this repository correspond to versions of the s2i-dotnet
 $ oc new-project mydemo
 
 # Add the .NET Core application
-$ oc new-app dotnet:3.1~https://github.com/redhat-developer/s2i-dotnetcore-ex#dotnetcore-3.1 --context-dir app
+$ oc new-app dotnet:5.0-ubi8~https://github.com/redhat-developer/s2i-dotnetcore-ex#dotnet-5.0 --context-dir app
 
 # Make the .NET Core application accessible externally and show the url
 $ oc expose service s2i-dotnetcore-ex
@@ -29,13 +29,13 @@ $ oc get route s2i-dotnetcore-ex
 # Use git to check out the .NET Core application
 $ git clone https://github.com/redhat-developer/s2i-dotnetcore-ex
 $ cd s2i-dotnetcore-ex/app
-$ git checkout dotnetcore-3.1
+$ git checkout dotnet-5.0
 
 # Create a new OpenShift project
 $ odo project create mydemo
 
 # Add a component for the .NET Core application
-$ odo create dotnet:3.1
+$ odo create dotnet:5.0-ubi8
 
 # Make the .NET Core application accessible externally
 $ odo url create
@@ -46,7 +46,7 @@ $ odo push
 
 == Copyright and License
 
-Copyright 2016-2019 by Red Hat, Inc.
+Copyright 2016-2020 by Red Hat, Inc.
 
 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this package except in compliance with the License (see the `LICENSE` file
